--- a/collisions.ipynb
+++ b/collisions.ipynb
@@ -14,7 +14,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "asdasd\n"
+   ]
   },
   {
    "cell_type": "markdown",
